--- a/static/src/stylesheets/module/_social.scss
+++ b/static/src/stylesheets/module/_social.scss
@@ -202,6 +202,16 @@ category: Common
     }
 }
 
+.social-icon--more {
+    background: $neutral-6;
+    border-radius: 50%;
+    color: $neutral-2;
+    display: inline-block;
+    line-height: 32px;
+    text-align: center;
+}
+
+
 .selection-sharing {
     position: absolute;
     margin-top: -$gs-baseline * 3;
