Add slim header to immersive articles without a main picture

--- a/static/src/stylesheets/module/content/_article-immersive.scss
+++ b/static/src/stylesheets/module/content/_article-immersive.scss
@@ -112,6 +112,7 @@
     @include fs-headline(7, true);
     line-height: 1;
     font-weight: 200;
+    color: #ffffff;
 
     @include mq(desktop) {
         font-size: 4rem;
