--- a/applications/app/views/signup/newsletters.scala.html
+++ b/applications/app/views/signup/newsletters.scala.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="newsletter-card__meta js-newsletter-meta">
-                    <form action="@LinkTo("/email")" method="post" class="newsletter-card__signup">
+                    <form action="@LinkTo("/email")" method="post" target="magicframe" class="newsletter-card__signup">
                         <input class="newsletter-card__text-input js-newsletter-card__text-input"
                           type="email"
                           name="email"
@@ -119,5 +119,7 @@
         </div>
     </div>
   </div>
+
+  <iframe width="0" height="0" border="0" name="magicframe" id="magicframe"></iframe>
 
 }
