--- a/static/src/javascripts/projects/common/views/contributions-embed.html
+++ b/static/src/javascripts/projects/common/views/contributions-embed.html
@@ -2,25 +2,24 @@
     <div class="contributions__flex-container">
         <div>
             <h3 class="contributions__title">
-                Support our journalism</h3></div>
+                <%=titleCopy%></h3></div>
         <div>
-            <p class="contributions__paragraph">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
-            <p class="contributions__paragraph">Make a one-off contribution:</p></div>
+            <p class="contributions__paragraph">Please give to the Guardian by making a one-off contribution</p></div>
         <div class="contributions__amount-field contributions__amount-field--<%=variant%>">
             <div>
                 <div class="js-button-group contributions__button-group u-cf">
                     <button type="button" class="js-button contributions__option-button contributions__option-button--<%=variant%>" data-amount="25">
-                        <span class="currency js-currency"><%=currency%></span>25
+                        <span><%=currency%></span>25
                     </button><button type="button" class="js-button contributions__option-button contributions__option-button--<%=variant%> active" data-amount="50">
-                    <span class="currency js-currency"><%=currency%></span>50
+                    <span><%=currency%></span>50
                 </button><button type="button" class="js-button contributions__option-button contributions__option-button--<%=variant%>" data-amount="100">
-                    <span class="currency js-currency"><%=currency%></span>100
+                    <span><%=currency%></span>100
                 </button><button type="button" class="js-button contributions__option-button contributions__option-button--<%=variant%>" data-amount="250">
-                    <span class="currency js-currency"><%=currency%></span>250</button>
+                    <span><%=currency%></span>250</button>
                 </div>
             </div>
             <div >
-                <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--<%=variant%>" href="<%=linkUrl%>" target="_blank">
+                <a class="js-submit-input-contribute contributions__option-button contributions__contribute contributions__contribute--<%=variant%>" href="<%=linkUrl%>" target="_blank">
                     Contribute
                 </a>
             </div>
