--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -1,12 +1,15 @@
 @(sharelinks: model.ShareLinkMeta, position: String = "bottom", iconModifier: List[String] = Nil)
 
 <ul class="social social--@position js-social--@position u-unstyled u-cf" data-component="social">
-    @sharelinks.visible.map { item => @ShareLink(item) }
-    @sharelinks.hidden.fold(Html(""))(_ => SocialMore)
+    @sharelinks.visible.map { link => @ShareLink(Nil, link) }
+    @sharelinks.hidden.fold(Html("")){ hiddenLinks =>
+        @SocialMore
+        @hiddenLinks.map { link => @ShareLink(List("social__item--hidden", "social__item--secondary"), link) }.toList
+    }
 </ul>
 
-@ShareLink(item: model.ShareLink) = {
-    <li class="social__item social__item--@item.css" data-link-name="@item.css">
+@ShareLink(extraClasses: List[String], item: model.ShareLink) = {
+    <li class="social__item social__item--@item.css @extraClasses.mkString(" ")" data-link-name="@item.css">
         <a  class="social__action js-social__action--@position social-icon-wrapper"
         data-link-name="social @position"
         href="@item.href"
