On-button arrow positioning tweaks

--- a/static/src/javascripts/projects/common/views/membership-message.html
+++ b/static/src/javascripts/projects/common/views/membership-message.html
@@ -4,7 +4,7 @@
     </div>
     <a id="membership__engagement-message-link" class="u-faux-block-link__overlay" target="_blank" href="<%=linkHref%>" data-link-name="Read more link">
     </a>
-    <div id="membership__engagement-message-button" class="message-button-rounded__cta is-hidden">
+    <span id="membership__engagement-message-button" class="message-button-rounded__cta is-hidden">
         <a id="membership__engagement-message-button-link" href="<%=linkHref%>" target="_blank" data-link-name="Read more button"></a><%=arrowWhiteRight%>
-    </div>
+    </span>
 </div>
