--- a/applications/app/views/fragments/interactiveBody.scala.html
+++ b/applications/app/views/fragments/interactiveBody.scala.html
@@ -18,9 +18,8 @@
 
 @body(interactive: model.Interactive, isImmersive: Boolean, isPaidContent: Boolean) = {
     @if(isImmersive) {
-        <div class="@RenderClasses(Map("paid-content--advertisement-feature" -> isPaidContent))">
-            @bodyRaw(interactive)
-        </div>
+        @* Must not be wrapped in any elements to support full screen immersives *@
+        @bodyRaw(interactive)
     } else {
         <div class="l-side-margins">
             <article id="article" class="@RenderClasses(
