--- a/common/app/views/mainEmail.scala.html
+++ b/common/app/views/mainEmail.scala.html
@@ -12,6 +12,20 @@
         <link rel="canonical" href="@LinkTo(page.metadata.canonicalUrl.map(LinkTo(_)).getOrElse(CanonicalLink(request, page.metadata.webUrl)))" />
         <title>@views.support.Title(page)</title>
 
+        @*
+         * Outlook doesn't support web fonts and also doesn't handle
+         * fallback fonts correctly, so all "Guardian Egyptian Text" will
+         * come out as Times New Roman despite the fallback font of Georgia.
+         * So for Outlook we explicitly set Georgia as the preferred font.
+         *@
+        <!--[if mso]>
+        <style>
+            h1, h2, h3, h4, h5, h6, p, blockquote {
+                font-family: Georgia, serif !important;
+            }
+        </style>
+        <![endif]-->
+
         @fragments.email.stylesheets.ink()
         @fragments.email.stylesheets.fonts()
         @fragments.email.stylesheets.main()
