renaming new header to new nav

--- a/common/app/views/fragments/containers/facia_cards/container.scala.html
+++ b/common/app/views/fragments/containers/facia_cards/container.scala.html
@@ -90,7 +90,7 @@
                     frontId.getOrElse(pageId)
                     )) { case (isFirstContainer, id) =>
 
-                    @if((mvt.ABNewHeaderVariant.isParticipating || mvt.ABNewHeaderVariantTwo.isParticipating) && isFirstContainer) {
+                    @if((mvt.ABNewNavVariant.isParticipating || mvt.ABNewNavVariantTwo.isParticipating) && isFirstContainer) {
 
                         <ul class="tertiary-navigation mobile-only">
 
