--- a/common/app/views/fragments/inlineJSNonBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSNonBlocking.scala.html
@@ -20,7 +20,7 @@
     @InlineJs(showUserName().body, "showUserName.js")
 }
 
-@if(mvt.ABNewHeaderVariant.canRun) {
+@if(mvt.ABNewNavVariant.canRun) {
     // editionalise new header navigation
     @InlineJs(editionaliseMenu().body, "editionaliseMenu.js")
 }
