Add proper content and styling for hosted more from popup

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -120,6 +120,7 @@
                         <span class="button-text">Close</span>
                         @fragments.inlineSvg("cross", "icon", List("cross", "js-hosted-popup-close-button"))
                     </button>
+                    <div class="js-hosted-more-from-popup-container"></div>
                 </div>
             </div>
         </div>
