--- a/commercial/app/views/hosted/hostedArticleOnward.scala.html
+++ b/commercial/app/views/hosted/hostedArticleOnward.scala.html
@@ -55,6 +55,16 @@
             @if(trails.length > 2){
                 <div class="hosted__see-all-onward js-hosted-see-all-onward hosted-tone-btn">See all</div>
             }
+            <div class="u-h">
+                <div class="js-hosted-more-from-popup-content">
+                    @for(trail <- trails) {
+                        <a href="@{trail.url}" class="hosted__next-page-tile--popup" data-link-name="Next Hosted Page: @{trail.title}">
+                            <img class="hosted__next-page-thumb--popup" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
+                            <p class="hosted__next-page-title--popup">@{trail.title}</p>
+                        </a>
+                    }
+                </div>
+            </div>
         </div>
     </div>
 }
