--- a/commercial/app/views/hosted/hostedArticleOnward.scala.html
+++ b/commercial/app/views/hosted/hostedArticleOnward.scala.html
@@ -1,5 +1,5 @@
 @import common.commercial.hosted.HostedPage
-@(trails: Seq[HostedPage])(implicit request: RequestHeader)
+@(trails: Seq[HostedPage], defaultRows: Int = 2, maxRows: Int = 4)(implicit request: RequestHeader)
 
 @if(trails.isEmpty) {
     <div></div>
@@ -11,7 +11,7 @@
             <h2 class="hosted__next-page--client-name hosted-tone">@{trails.head.campaign.owner}</h2>
         </div>
         <div class="hosted__ab-test-control">
-            @for(trail <- trails.slice(0, 2)) {
+            @for(trail <- trails.slice(0, defaultRows)) {
                 <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                     <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
@@ -19,16 +19,16 @@
             }
         </div>
         <div class="hosted__ab-test-variant1">
-            @if(trails.length > 4){
-                <div class="hosted__next-video__carousel-arrows">
+            @if(trails.length > maxRows){
+                <div class="hosted__next-page__carousel-arrows">
                     @fragments.inlineSvg("arrow-right", "icon", List("arrow-left", "prev-oj-item"))
                     @fragments.inlineSvg("arrow-right", "icon", List("arrow-right", "next-oj-item"))
                 </div>
             }
-            <div class="hosted__next-video__carousel-wrapper js-carousel-wrapper">
-                @for(i <- trails.indices if i % 4 == 0) {
-                    <div class="carousel-page" style="left: @{i*25}%;">
-                        @for(trail <- trails.slice(i, i + 4)) {
+            <div class="hosted__next-page__carousel-wrapper js-carousel-wrapper">
+                @for(i <- trails.indices if i % maxRows == 0) {
+                    <div class="carousel-page" style="left: @{i*100/maxRows}%;">
+                        @for(trail <- trails.slice(i, i + maxRows)) {
                             <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                                 <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                                 <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
@@ -37,22 +37,22 @@
                     </div>
                 }
             </div>
-            @if(trails.length > 4){
+            @if(trails.length > maxRows){
                 <div class="hosted__carousel-marker">
-                    @for(i <- trails.indices if i % 4 == 0) {
-                        <div class="hosted__carousel-dot hosted-tone-btn js-carousel-dot-@{i/4} @{if(i == 0) "highlighted" else ""}"></div>
+                    @for(i <- trails.indices if i % maxRows == 0) {
+                        <div class="hosted__carousel-dot hosted-tone-btn js-carousel-dot-@{i/maxRows} @{if(i == 0) "highlighted" else ""}"></div>
                     }
                 </div>
             }
         </div>
         <div class="hosted__ab-test-variant2">
-            @for(trail <- trails.slice(0, 2)) {
+            @for(trail <- trails.slice(0, defaultRows)) {
                 <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
                     <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
                 </a>
             }
-            @if(trails.length > 2){
+            @if(trails.length > defaultRows){
                 <div class="hosted__see-all-onward js-hosted-see-all-onward hosted-tone-btn">See all</div>
             }
             <div class="u-h">
