--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -205,29 +205,6 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
             @include f-headlineSans;
         }
     }
-    .hosted__next-page-header--border {
-        width: 100%;
-        height: 10px;
-        margin-bottom: 4px;
-    }
-    .hosted-article__next-page-title {
-        font-size: 16px;
-        line-height: 18px;
-        padding: 6px;
-        @include mq($until: phablet) {
-            font-size: 14px;
-            line-height: 16px;
-        }
-    }
-    .hosted-article__next-page .hosted__next-page--tile {
-        background: transparent;
-        border-top: 2px solid #e0e0e0;
-        margin-bottom: 10px;
-    }
-    .hosted-article__next-page .hosted__next-page--header {
-        border: 0;
-        padding: 0;
-    }
     .from-content-api > ul li {
         margin-bottom: 0;
     }
@@ -235,6 +212,33 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     .gu-image {
         height: auto;
     }
+}
+
+.hosted__next-page-header--border {
+    width: 100%;
+    height: 10px;
+    margin-bottom: 4px;
+}
+
+.hosted__next-page-title {
+    font-size: 16px;
+    line-height: 18px;
+    padding: 6px;
+    @include mq($until: phablet) {
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
+
+.hosted__next-page .hosted__next-page--tile {
+    background: transparent;
+    border-top: 2px solid #e0e0e0;
+    margin-bottom: 10px;
+}
+
+.hosted__next-page .hosted__next-page--header {
+    border: 0;
+    padding: 0;
 }
 
 .zootropolis {
@@ -469,7 +473,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
 }
 
 /* Hosted More From Carousel AB test */
-.hosted__next-video__carousel-arrows {
+.hosted__next-page__carousel-arrows {
     position: absolute;
     right: 0;
     top: 26px;
@@ -492,7 +496,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     }
 }
 
-.hosted__next-video__carousel-wrapper {
+.hosted__next-page__carousel-wrapper {
     position: relative;
     transform: translate(0, 0);
     transition: transform 1s ease;
@@ -576,9 +580,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
 }
 
 .hosted__more-from-popup {
-    position: fixed;
     width: 100%;
-
 }
 
 .hosted__next-page-tile--popup {
@@ -587,6 +589,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     height: 260px;
     margin: $gs-baseline 0 0 $gs-gutter;
     background: #ffffff;
+    vertical-align: top;
 }
 
 .hosted__next-page-thumb--popup {
