--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -923,14 +923,16 @@ $hosted-video-height: 540px;
 }
 
 .hosted-video-page .hosted__next-page-placeholder,
-.hosted-video__next-page {
+.hosted-video-page .hosted__next-page {
     order: 3;
 }
-.hosted-video__next-page {
+
+.hosted__next-page {
     @include mq(leftCol) {
         width: 300px;
     }
     margin: 0 $gs-gutter $gs-gutter;
+    position: relative;
 }
 
 .hosted__next-page--more-from {
@@ -951,7 +953,6 @@ $nextPageThumbWidthMobile: #{$nextPageThumbHeightMobile * 5 / 3};
 .hosted__next-page .hosted__next-page--tile {
     display: block;
     color: #333333;
-    border-top: 2px solid;
     text-decoration: none;
     position: relative;
     min-height: $nextPageThumbHeight;
