--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -138,7 +138,7 @@
             </div>
 
             @page.nextPage.map { nextPage =>
-                @hostedArticleOnward(List(makeshiftPage(nextPage, page.campaign)), 1, 1)
+                @hostedOnwardJourney(List(makeshiftPage(nextPage, page.campaign)), 1, 1)
             }.getOrElse {
                 <div class="js-onward-placeholder hosted__next-page-placeholder"></div>
             }
