--- a/common/app/views/fragments/atoms/atom.scala.html
+++ b/common/app/views/fragments/atoms/atom.scala.html
@@ -1,4 +1,4 @@
-@(model: _root_.model.content.Atom, shouldFence: Boolean)(implicit request: RequestHeader)
+@(model: _root_.model.content.Atom, shouldFence: Boolean, isAmp: Boolean)(implicit request: RequestHeader)
 @import _root_.model.content.Quiz
 @import _root_.model.content.MediaAtom
 @import _root_.model.content.InteractiveAtom
@@ -7,7 +7,7 @@
     model match {
         case quiz: Quiz => views.html.fragments.atoms.quiz(quiz, maybeResults = None, showResults = false, Nil)
         case media: MediaAtom => media match {
-            case youtube if media.assets.head.platform == "Youtube" => views.html.fragments.atoms.youtube(media)
+            case youtube if media.assets.head.platform == "Youtube" => views.html.fragments.atoms.youtube(media, isAmp)
             case _ => views.html.fragments.atoms.media(media)
         }
         case interactive: InteractiveAtom => views.html.fragments.atoms.interactive(interactive, shouldFence)
