--- a/common/app/views/fragments/atoms/youtube.scala.html
+++ b/common/app/views/fragments/atoms/youtube.scala.html
@@ -1,8 +1,18 @@
 @import conf.Configuration.site.host
 @import views.support.RenderClasses
 
-@(media: model.content.MediaAtom)(implicit request: RequestHeader)
+@(media: model.content.MediaAtom, isAmp: Boolean)(implicit request: RequestHeader)
+@if(isAmp){
 
+    <amp-youtube
+    data-videoid="@media.assets.head.id"
+    layout="responsive"
+    width="5" height="3" data-param-modestbranding="1" data-param-rel="0" data-param-showinfo="0">
+    </amp-youtube>
+
+
+
+} else {
     <div class="@RenderClasses(Map(
         "u-responsive-ratio" -> true,
         "u-responsive-ratio--hd" -> true
@@ -15,5 +25,6 @@
             </iframe>
 
     </div>
+    }
 }
 
