--- a/article/app/views/liveblog/liveBlogBody.scala.html
+++ b/article/app/views/liveblog/liveBlogBody.scala.html
@@ -1,6 +1,5 @@
 @import _root_.liveblog.KeyEventData
 @import model.Badges.badgeFor
-@import model.ArticleSchemas
 @import _root_.liveblog.Canonical
 
 @(model: LiveBlogPage, amp: Boolean = false)(implicit request: RequestHeader)
@@ -13,21 +12,13 @@
 @import views.support.TrailCssClasses.toneClass
 @import _root_.liveblog.SinceBlockId
 
-@* Aug 2016: Google only supports NewsArticle in their amp carousel. To remove once Google starts supporting other schemas like schema.org/LiveBlogPosting *@
-@isAmpAndStructuredAsNewsArticle() = @{
-    amp && AmpLiveBlogNewsArticleSwitch.isSwitchedOn
-}
-@schemaType(page: LiveBlogPage) = @{
-    if(isAmpAndStructuredAsNewsArticle()) ArticleSchemas.NewsArticle else page.article.metadata.schemaType
-}
-
 @defining((model.article, Edition(request).timezone)) { case (article, timezone) =>
 <div class="js-notifications-blocked"></div>
 <div class="l-side-margins">
 
     <article id="live-blog" data-test-id="live-blog"
         class="content content--liveblog tonal tonal--@toneClass(article) blog @if(article.fields.isLive){is-live} section-@article.trail.sectionName.toLowerCase"
-        itemscope itemtype="@schemaType(model)" role="main">
+        itemscope itemtype="@model.article.metadata.schemaType" role="main">
 
         <meta itemprop="url" content="@LinkTo(article.metadata.url)">
         <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
