--- a/static/src/stylesheets/inline/article-explore.scss
+++ b/static/src/stylesheets/inline/article-explore.scss
@@ -137,6 +137,7 @@ $explore-series-header-element-opacity: .85;
 
 .explore-series-headline__content {
     @include fs-headline(4);
+    line-height: 24px;
     font-weight: 900;
     color: #ffffff;
     margin: $gs-baseline 0;
@@ -144,7 +145,8 @@ $explore-series-header-element-opacity: .85;
     padding-left: 0;
 
     @include mq($from: desktop) {
-        @include fs-headline(6);
+        @include fs-headline(7);
+        line-height: 36px;
         font-weight: 900;
         width: gs-span(8);
         padding-left: $gs-gutter;
@@ -165,6 +167,10 @@ $explore-series-header-element-opacity: .85;
 
     .explore--video & {
         bottom: $gs-gutter * 3;
+
+        @include mq($until: desktop) {
+          bottom: $gs-gutter * 5;
+        };
     }
 }
 
@@ -198,8 +204,8 @@ $explore-series-header-element-opacity: .85;
         color: $neutral-1;
         font-weight: 900;
 
-        @include mq($from: tablet) {
-            @include fs-headline(7);
+        @include mq($from: desktop) {
+            @include fs-headline(6);
             font-weight: 900;
             line-height: 38px;
         }
@@ -253,6 +259,8 @@ $explore-series-header-element-opacity: .85;
     position: absolute;
     top: 0;
     width: 100%;
+    height: gs-span(1);
+    overflow: hidden;
 
     @include mq($from: tablet) {
         top: 0;
