onward journey - more styling for popup, css tidy, and show more trails for chester zoo

--- a/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted-article.scss
@@ -169,7 +169,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
     }
 
     .hide-on-desktop {
-        .hosted-article__next-page {
+        .hosted__next-page {
             margin-top: 30px;
             position: relative;
         }
@@ -181,7 +181,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
         }
     }
     .content__secondary-column {
-        .hosted-article__next-page {
+        .hosted__next-page {
             width: auto;
             position: absolute;
             margin: 70px 0;
@@ -191,6 +191,7 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
             .hosted__next-page--header,
             .hosted__next-page--tile {
                 margin-right: 0;
+                margin-top: 0;
             }
         }
     }
@@ -522,9 +523,11 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
 .ab-test-variant2 {
     .hosted__see-all-onward {
         cursor: pointer;
-        display: inline-block;
         border-radius: 100px;
         padding: 0 $gs-gutter;
+        position: absolute;
+        top: 20px;
+        right: 0;
     }
 }
 
@@ -585,22 +588,34 @@ $zootropolisColor: #2ec869; //need to remove references to brand colours here ev
 
 .hosted__next-page-tile--popup {
     display: inline-block;
-    width: 300px;
-    height: 260px;
+    width: calc(100% - #{2 * $gs-gutter});
     margin: $gs-baseline 0 0 $gs-gutter;
     background: #ffffff;
     vertical-align: top;
+    position: relative;
+    text-decoration: none;
+
+    @include mq(tablet) {
+        max-width: gs-span(3);
+    }
+
+    @include mq(leftCol) {
+        max-width: gs-span(4);
+    }
 }
 
 .hosted__next-page-thumb--popup {
-    width: 300px;
-    height: 180px;
+    width: 100%;
+    z-index: 1;
+    position: absolute;
 }
 
 .hosted__next-page-title--popup {
     @include f-headlineSans;
     color: $neutral-1;
     padding: 8px;
+    z-index: 1;
+    min-height: 48px;
 }
 
 .hosted__carousel-marker {
