--- a/commercial/app/views/hosted/hostedOnwardJourney.scala.html
+++ b/commercial/app/views/hosted/hostedOnwardJourney.scala.html
@@ -1,4 +1,8 @@
 @import common.commercial.hosted.HostedPage
+@import layout.ContentWidths.GalleryMedia
+@import model.ImageMedia
+@import model.ImageAsset
+@import com.gu.contentapi.client.model.v1._
 @(trails: Seq[HostedPage], defaultRows: Int, maxRows: Int)(implicit request: RequestHeader)
 
 @if(trails.isEmpty) {
@@ -14,7 +18,7 @@
             @for(trail <- trails.slice(0, defaultRows)) {
                 <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                    <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
+                    <p class="hosted__next-page-title">@{trail.title}</p>
                 </a>
             }
         </div>
@@ -31,7 +35,7 @@
                         @for(trail <- trails.slice(i, i + maxRows)) {
                             <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                                 <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                                <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
+                                <p class="hosted__next-page-title">@{trail.title}</p>
                             </a>
                         }
                     </div>
@@ -49,7 +53,7 @@
             @for(trail <- trails.slice(0, defaultRows)) {
                 <a href="@{trail.url}" class="hosted__next-page--tile" data-link-name="Next Hosted Page: @{trail.title}">
                     <img class="hosted__next-page-thumb" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
-                    <p class="hosted__next-page-title hosted-article__next-page-title">@{trail.title}</p>
+                    <p class="hosted__next-page-title">@{trail.title}</p>
                 </a>
             }
             @if(trails.length > defaultRows){
@@ -59,7 +63,13 @@
                 <div class="js-hosted-more-from-popup-content">
                     @for(trail <- trails) {
                         <a href="@{trail.url}" class="hosted__next-page-tile--popup" data-link-name="Next Hosted Page: @{trail.title}">
-                            <img class="hosted__next-page-thumb--popup" src="@{trail.imageUrl}" alt="Next Page: @{trail.title}">
+                            <div class="hosted-next-page-bg hosted-tone-bg"></div>
+                            @fragments.image(
+                                ImageMedia.make(Seq(ImageAsset.make(Asset(AssetType.Image, Some("image/jpeg"), Some(trail.imageUrl), typeData = Some(AssetFields(width = Some(5), height = Some(3)))), 0))),
+                                Seq("hosted__next-page-thumb--popup"),
+                                GalleryMedia.inline,
+                                trail.title
+                            )
                             <p class="hosted__next-page-title--popup">@{trail.title}</p>
                         </a>
                     }
